<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Life App</string>
    <string name="action_settings">Log in?</string>
    <string name="main_scripts_button">Scripts</string>
    <string name="main_time_button">Time Management</string>
    <string name="main_relationship_button">Relationship Maintenance</string>
    <string name="main_hygiene_button">Hygiene</string>
    <string name="main_emergency_button">Emergency Contacts</string>
    <string name="title_activity_scripts_main_menu">Scripts Main Menu</string>
    <string name="scripts_greetings_button">Greetings</string>
    <string name="scripts_departures_button">Departures</string>
    <string name="scripts_disagreements_button">Disagreements</string>
    <string name="scripts_dosanddonts_button">Dos and donts</string>
    <string name="title_activity_relationship_main_menu">Relationship Maintanence</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search here</string>
    <string name="label_search">Search</string>
    <string-array name="menu">
        <item >Relaionship Maintenance</item>
        <item >Scripts</item>
        <item >Time Management</item>
        <item >Hygiene</item>
        <item >Emergency Contacts</item>
    </string-array>
	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
