<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:background="@drawable/simple_bg"
   	android:weightSum="4">
   	<!-- android:background="@drawable/pyramid" -->
   	 
   	

	    <Button
	        android:id="@+id/scripts_greetings_button"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"	
	        android:text="@string/scripts_greetings_button" 
	        android:layout_weight="1"/>
	
	    <Button
	        android:id="@+id/scripts_departures_button"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"	
	        android:text="@string/scripts_departures_button" 
	        android:layout_weight="1"/>
	
	    <Button
	        android:id="@+id/scripts_disagreements_button"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"	
	        android:text="@string/scripts_disagreements_button" 
	        android:layout_weight="1"/>
	
	    <Button
	        android:id="@+id/scripts_dosanddonts_button"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"	
	        android:text="@string/scripts_dosanddonts_button" 
	        android:layout_weight="1"/>
	

</LinearLayout>
