<android.support.v4.widget.DrawerLayout
	xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"   >
	<FrameLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
	    
	</FrameLayout>

	<LinearLayout 
    android:orientation="vertical"
    android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:background="@drawable/simple_bg"
   	android:weightSum="5">

   	 
   	

	    <Button
	        android:id="@+id/main_scripts_button"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"	
	        android:text="@string/main_scripts_button" 
	        android:layout_weight="1"/>
	
	    <Button
	        android:id="@+id/main_time_button"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"	
	        android:text="@string/main_time_button" 
	        android:layout_weight="1"/>
	
	    <Button
	        android:id="@+id/main_relationship_button"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"	
	        android:text="@string/main_relationship_button" 
	        android:layout_weight="1"/>
	
	    <Button
	        android:id="@+id/main_hygiene_button"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"	
	        android:text="@string/main_hygiene_button" 
	        android:layout_weight="1"/>
	
	    <Button
	        android:id="@+id/main_emergency_button"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"	
	        android:text="@string/main_emergency_button" 
	        android:layout_weight="1"/>
</LinearLayout>
	
    
	<ListView
        android:id="@+id/drawerList"
      android:background="#FF8800"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
       
        />
</android.support.v4.widget.DrawerLayout>
